--- a/style.css
+++ b/style.css
@@ -31,23 +31,36 @@ body {
   font-size: 15px;
 }
 .container {
-  width: 100%;
-  max-width: 375px;
+  width: 90%;
+  max-width: 1200px;
   background-color: var(--LightGrayishBlue);
   overflow: hidden;
   border-radius: 8px;
   /* margin-top: 5px; */
   padding: 1rem;
+
+  display: grid;
+  place-items: center;
 }
 .cards {
   position: relative;
+  @media (min-width: 768px) { 
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+  }
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 20px;
+    height: 90vh;
+  }
 }
 .card {
   text-align: left;
   /* margin: 0.5rem 0; */
   margin-bottom: 1rem;
   padding: 1rem;
-  max-width: 800px;
   border-radius: 1rem;
 }
 .cards img {
@@ -60,6 +73,7 @@ body {
   top: 1rem;
   margin-left: 2rem;
   padding-left: 2.2rem;
+ 
 }
 .name,
 .tag {
@@ -74,6 +88,9 @@ body {
   background-size: 100px;
   position: relative;
   /* min-height: 400px; */
+  @media (min-width: 1024px) { 
+    grid-column: 1/3;
+  }
 }
 .card-daniel .name {
   color: #e0c4e9;
@@ -105,6 +122,9 @@ body {
 .card-jeanette {
   position: relative;
   background-color: var(--White);
+  @media (min-width: 1024px) { 
+    grid-column: 1/2;
+  }
 }
 .card-jeanette .name {
   color: #80848e;
@@ -121,6 +141,10 @@ body {
 .card-patrick {
   position: relative;
   background-color: var(--VeryDarkBlackishBlue);
+  @media (min-width: 1024px) { 
+    grid-column: 2/4;
+    
+  }
 }
 .card-patrick .name {
   color: #cbcfd7;
@@ -134,6 +158,11 @@ body {
 .card-kira {
   position: relative;
   background-color: var(--White);
+  @media (min-width: 1024px) { 
+    grid-column: 4/5;
+    grid-row: 1/3;
+    font-size: 14px;
+  }
 }
 .card-kira.name {
   color: #60646c;
