--- a/style.css
+++ b/style.css
@@ -160,3 +160,55 @@ footer {
 .copy {
   color: rebeccapurple;
 }
+
+@media (min-width: 1024px) {
+  body {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    max-width: 1300px;
+    /* margin: auto 0; */
+  }
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, auto);
+    gap: 1rem;
+  }
+  .card-daniel {
+    background-color: var(--VioletColor);
+    background-image: url(./images/bg-pattern-quotation.svg);
+    background-position: top right 20px;
+    background-repeat: no-repeat;
+    background-size: 100px;
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+  .card-jonathan {
+    background-color: var(--VeryDarkGrayishBlue);
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+  .card-kira {
+    background-color: var(--White);
+    grid-column: 2 / 4;
+    grid-row: 2 / 4;
+  }
+  .card-jeanette {
+    background-color: var(--White);
+    grid-column: 4 / 5;
+    grid-row: 1 / 4;
+  }
+  .card-patrick {
+    background-color: var(--VeryDarkBlackishBlue);
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+}
